--- a/Views/ControlDetails/ControlDetails.cshtml
+++ b/Views/ControlDetails/ControlDetails.cshtml
@@ -286,12 +286,12 @@
                                     @Html.TextBoxFor(m => m.ShippingRatePerKg, new { type = "text", inputmode = "numeric", pattern = "^\\d+([.,]?\\d+)*$", @class = "coefficient-input" })
                                 </span>
                             </div>
-                            <div class="details-container-data-row">
+                            @* <div class="details-container-data-row">
                                 <span>Множник вартості доставки на м³:</span>
                                 <span>
                                     @Html.TextBoxFor(m => m.ShippingRatePerCubicMeter, new { type = "text", inputmode = "numeric", pattern = "^\\d+([.,]?\\d+)*$", @class = "coefficient-input" })
                                 </span>
-                            </div>
+                            </div> *@
                             <div class="details-container-data-row-filled">
                                 <span>Інструкція</span>
                                 <a style="padding: 3px; width: 65px; display: flex; justify-content: center; align-items: center;" href="~/docs/Інструкція.docx">
