--- a/Views/EnterpriseOrders/EnterpriseOrders.cshtml
+++ b/Views/EnterpriseOrders/EnterpriseOrders.cshtml
@@ -173,7 +173,7 @@
 
             .range-container input {
                 width: 50%;
-                color: #E1E2F3;
+                color: #595586;
                 border: none;
                 border-radius: 5px;
                 outline: none;
