--- a/Views/PatchNotes/PatchNotes.cshtml
+++ b/Views/PatchNotes/PatchNotes.cshtml
@@ -28,6 +28,11 @@
             <span>Це необхідна дія після кожного оновлення, щоб уникнути багів та помилок відображення сторінок сайту.</span>
         </div>
         <div class="card-data">
+            <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення доставки (05.09.2024 / 21:54)</span>
+            <span>Змінено механізм розрахунку доставки, тепер враховується лише вага. Вона множиться на коефіцієнт на кг (зараз виставлено 2€ ≈ 90грн за кг, його можна змінити в керуванні), якщо вага обладнання менше 1кг, рахується як для 1кг.</span>
+            <span>Доставка тепер завжди автоматично додається до ціни обладання при створенні КП та при відправці листа до бухгалтерії.</span>
+        </div>
+        <div class="card-data">
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення замовлень (04.09.2024 / 13:44)</span>
             <span>Додано новий розділ на сторінці вибраного замовлення - "Бухгалтерія". За допомогою цього розділу можна відправити рахунок на електрону пошту для бухглатерії.</span>
             <span>Для цього необхідно вказати отримувача, якщо потрібен додатковий отримувач, вказати його теж. Далі додати коментар якщо потрібно, обрати курс. Наступним кроком обрати чи включати доставку у ціну кожної позиції, чи ні. Якщо доставка включена, то вона попозиційно додається до ціни обладнання, якщо ні - то не буде відображатися у таблиці і не буде додана у ціну обладнання.</span>
