--- a/Views/PatchNotes/PatchNotes.cshtml
+++ b/Views/PatchNotes/PatchNotes.cshtml
@@ -31,6 +31,7 @@
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення доставки (05.09.2024 / 21:54)</span>
             <span>Змінено механізм розрахунку доставки, тепер враховується лише вага. Вона множиться на коефіцієнт на кг (зараз виставлено 2€ ≈ 90грн за кг, його можна змінити в керуванні), якщо вага обладнання менше 1кг, рахується як для 1кг.</span>
             <span>Доставка тепер завжди автоматично додається до ціни обладання при створенні КП та при відправці листа до бухгалтерії.</span>
+            <span style="color: #FF705C;">Важливо! У замовлень які були створені до оновлення нічого автоматично перераховуватись не буде. Якщо потрібно перерахувати ціни за доставку якогось замовлення, необхідно перейти до конкретного замовлення та натиснути "Оновити прайси для замовлення".</span>
         </div>
         <div class="card-data">
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення замовлень (04.09.2024 / 13:44)</span>
