--- a/Views/ContactEdit/ContactEdit.cshtml
+++ b/Views/ContactEdit/ContactEdit.cshtml
@@ -86,15 +86,15 @@
                         placeholder = "Основний номер телефону",
                         @class = "data-input",
                         required = "required",
-                        pattern = "^\\+\\d{2} \\(\\d{3}\\) \\d{3}-\\d{2}-\\d{2}$",
-                        title = "Номер телефона повинен бути у форматі +XX (XXX) XXX-XX-XX."
+                        pattern = "^\\+\\d{1,3} \\(\\d{1,4}\\) \\d{1,4}-\\d{1,4}-\\d{1,4}$",
+                        title = "Номер телефона повинен бути у форматі +{1,3} ({1,4}) {1,4}-{1,4}-{1,4}."
                     })
                 @Html.TextBoxFor(m => m.ExtraPhoneNumber, new
                     {
                         placeholder = "Додатковий номер телефону (Якщо відсутній - залишити пустим)",
                         @class = "data-input",
-                        pattern = "^\\+\\d{2} \\(\\d{3}\\) \\d{3}-\\d{2}-\\d{2}$",
-                        title = "Номер телефона повинен бути у форматі +XX (XXX) XXX-XX-XX."
+                        pattern = "^\\+\\d{1,3} \\(\\d{1,4}\\) \\d{1,4}-\\d{1,4}-\\d{1,4}$",
+                        title = "Номер телефона повинен бути у форматі +{1,3} ({1,4}) {1,4}-{1,4}-{1,4}."
                     })
             </div>
             <div class="form-container-row">
