--- a/Views/PatchNotes/PatchNotes.cshtml
+++ b/Views/PatchNotes/PatchNotes.cshtml
@@ -31,6 +31,7 @@
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення контактів (06.09.2024 / 10:06)</span>
             <span>Змінено шаблон для введення номеру телефона контакта. Тепер він такий: +{1,3} ({1,4}) {1,4}-{1,4}-{1,4}. Значення у фігурних дужках означає діапазон кількості цифр, які можуть там бути.</span>
             <span>Змінено пошук на сторінці контактів по номеру телефона. Тепер його можна вводити як з символами "+", "-", "(", ")", "Пробіл", так і без цих символів. Також не обов'зяково вводити код країни, пошук працюватиме і без нього.</span>
+        </div>
         <div class="card-data">
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення доставки (05.09.2024 / 21:54)</span>
             <span>Змінено механізм розрахунку доставки, тепер враховується лише вага. Вона множиться на коефіцієнт на кг (зараз виставлено 2€ ≈ 90грн за кг, його можна змінити в керуванні), якщо вага обладнання менше 1кг, рахується як для 1кг.</span>
