--- a/Views/Shared/_Pagination.cshtml
+++ b/Views/Shared/_Pagination.cshtml
@@ -117,7 +117,7 @@
                                 SearchCity = model.SearchCity,
                                 SortAlphabetCity = model.SortAlphabetCity,
                                 SortAlphabetStreet = model.SortAlphabetStreet,
-                                SortEnterpriseId = model.SortEnterpriseId,
+                                SortAlphabetNameUA = model.SortAlphabetNameUA,
                                 SortAlphabetRegion = model.SortAlphabetRegion,
                                 IsSelectedEnterprises = model.IsSelectedEnterprises,
                                 CurrentPage = page,
