--- a/Views/PatchNotes/PatchNotes.cshtml
+++ b/Views/PatchNotes/PatchNotes.cshtml
@@ -28,6 +28,10 @@
             <span>Це необхідна дія після кожного оновлення, щоб уникнути багів та помилок відображення сторінок сайту.</span>
         </div>
         <div class="card-data">
+            <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення підприємств (07.09.2024 / 10:56)</span>
+            <span>Додано сортування по алфавіту на сторінці підприємств. Виправлено назву категорії "Всі піприємства" -> "Всі підприємства".</span>
+         </div>
+        <div class="card-data">
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення контактів (06.09.2024 / 10:06)</span>
             <span>Змінено шаблон для введення номеру телефона контакта. Тепер він такий: +{1,3} ({1,4}) {1,4}-{1,4}-{1,4}. Значення у фігурних дужках означає діапазон кількості цифр, які можуть там бути.</span>
             <span>Змінено пошук на сторінці контактів по номеру телефона. Тепер його можна вводити як з символами "+", "-", "(", ")", "Пробіл", так і без цих символів. Також не обов'зяково вводити код країни, пошук працюватиме і без нього.</span>
