--- a/Views/PatchNotes/PatchNotes.cshtml
+++ b/Views/PatchNotes/PatchNotes.cshtml
@@ -28,6 +28,11 @@
             <span>Це необхідна дія після кожного оновлення, щоб уникнути багів та помилок відображення сторінок сайту.</span>
         </div>
         <div class="card-data">
+            <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Технічне обслуговування (Кожної суботи з 20:00 до 20:30)</span>
+            <span>Кожної суботи з 20:00 до 20:30 відбувається технічне обслуговування системи. На цей час система не працює (або працює дуже повільно).</span>
+            <span style="color: #FF705C;">У цей час відбувається резервне копіювання бази даних, користування системою краще обмежити на цей час.</span>
+        </div>
+        <div class="card-data">
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення підприємств (07.09.2024 / 10:56)</span>
             <span>Додано сортування по алфавіту на сторінці підприємств. Виправлено назву категорії "Всі піприємства" -> "Всі підприємства".</span>
          </div>
