--- a/Views/PatchNotes/PatchNotes.cshtml
+++ b/Views/PatchNotes/PatchNotes.cshtml
@@ -28,6 +28,12 @@
             <span>Це необхідна дія після кожного оновлення, щоб уникнути багів та помилок відображення сторінок сайту.</span>
         </div>
         <div class="card-data">
+            <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення загальних функцій (21.09.2024 / 20:05)</span>
+            <span>Додано автозакриття модального вікна після створення файлу комерційної пропозиції.</span>
+            <span>Збільшено обмеження на введення знижки/націнки "100%" -> "1000%"</span>
+            <span>Змінено звернення у файлі комерційної пропозиції "Шановний(-а)" -> "Шановний"</span>
+        </div>
+        <div class="card-data">
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Технічне обслуговування (Кожної суботи з 20:00 до 20:30)</span>
             <span>Кожної суботи з 20:00 до 20:30 відбувається технічне обслуговування системи. На цей час система не працює (або працює дуже повільно).</span>
             <span style="color: #FF705C;">У цей час відбувається резервне копіювання бази даних, користування системою краще обмежити на цей час.</span>
